# pyDeepInsight

./: CITATION.cff  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
examples/: README.md  cam_feature_selection.ipynb  discretization_methods.ipynb  mrep_madelon.ipynb  mrep_madelon_tensor.ipynb  pytorch_squeezenet.ipynb
examples/data/: README.md
pyDeepInsight/: __init__.py  feature_selection.py  feature_selection.pyi  image_transformer.py  image_transformer.pyi  utils.py
pyDeepInsight/utils/: __init__.py  _ags.py  _assignment.py  _assignment.pyi  _norm2.py  _norm2.pyi  _sebs.py  filters.py  filters.pyi  sampler.py  sampler.pyi
stubs/pyDeepInsight/: __init__.pyi  feature_selection.pyi  image_transformer.pyi
stubs/pyDeepInsight/utils/: __init__.pyi  _ags.pyi  _assignment.pyi  filters.pyi  sampler.pyi
